Upgraded to java 20 and fixed build issues